added IP support but disabled due to high impact to runtime proformance

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,5 @@ uname = "^0.1.1"
 walkdir = "^2.3.2"
 libmacchina = "^4.0.2"
 sys-info = "^0.9.1"
+my_public_ip = "^0.1.0"
+local-ip-address = "^0.4.4"
