--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,5 +19,9 @@ uname = "^0.1.1"
 walkdir = "^2.3.2"
 libmacchina = "^4.0.2"
 sys-info = "^0.9.1"
+directories = "^4.0.1"
+serde = { version = "1.0.132", features = ["derive"] }
+toml = "^0.5.8"
+colored = "^2.0.0"
 # my_public_ip = "^0.1.0"
 # local-ip-address = "^0.4.4"
