added os varaible to config file

--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,7 @@
 # package options are "package-manager" or "path"
 packages = "package-managers"
 info_color = "magenta"
+os = "arch"
 
 # Colors - 
 # black
