--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,7 +24,4 @@ serde = { version = "1.0.132", features = ["derive"] }
 toml = "^0.5.8"
 colored = "^2.0.0"
 # my_public_ip = "^0.1.0"
-# local-ip-address = "^0.4.4"
-
-[profile.release]
-debug = true
+local-ip-address = "^0.4.4"
