--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,3 +24,4 @@ serde = { version = "1.0.132", features = ["derive"] }
 toml = "^0.5.8"
 colored = "^2.0.0"
 local-ip-address = "^0.4.4"
+rustix = { version = "0.35.9", features = ["process"] }
